Version 2010

  * Moved into Isabelle/HOL "Main"
  * Renamed "nitpick_const_def" to "nitpick_def", "nitpick_const_simp" to
    "nitpick_simp", "nitpick_const_psimp" to "nitpick_psimp", and
    "nitpick_ind_intro" to "nitpick_intro"
  * Replaced "special_depth" and "skolemize_depth" options by "specialize"
    and "skolemize"
  * Fixed monotonicity check

Version 1.2.2 (16 Oct 2009)

  * Added and implemented "star_linear_preds" option
  * Added and implemented "format" option
  * Added and implemented "coalesce_type_vars" option
  * Added and implemented "max_genuine" option
  * Fixed soundness issues related to "set", "distinct", "image", "Sigma",
    "-1::nat", subset, constructors, sort axioms, and partially applied
    interpreted constants
  * Fixed error in "show_consts" for boxed specialized constants
  * Fixed errors in Kodkod encoding of "The", "Eps", and "ind"
  * Fixed display of Skolem constants
  * Fixed error in "check_potential" and "check_genuine"
  * Added boxing support for higher-order constructor parameters
  * Changed notation used for coinductive datatypes
  * Optimized Kodkod encoding of "If", "card", and "setsum"
  * Improved the monotonicity check

Version 1.2.1 (25 Sep 2009)

  * Added explicit support for coinductive datatypes
  * Added and implemented "box" option
  * Added and implemented "fast_descrs" option
  * Added and implemented "uncurry" option
  * Renamed and generalized "sync_cards" and "inductive_mood" to "mono" and "wf"
  * Fixed soundness issue related to nullary constructors
  * Fixed soundness issue related to higher-order quantifiers
  * Fixed soundness issue related to the "destroy_constrs" optimization
  * Fixed soundness issues related to the "special_depth" optimization
  * Added support for PicoSAT and incorporated it with the Nitpick package
  * Added automatic detection of installed SAT solvers based on naming
    convention
  * Optimized handling of quantifiers by moving them inward whenever possible